[gd_scene load_steps=2 format=3 uid="uid://cjcihcy5w5pon"]

[ext_resource type="Script" uid="uid://bh6sgrurocqrf" path="res://src/scripts/audio_settings_panel.gd" id="1_y0cla"]

[node name="AudioSettings" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -41.0
offset_right = 60.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0cla")

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 21.0
offset_right = 107.0
offset_bottom = 37.0
step = 5.0

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 41.0
offset_right = 107.0
offset_bottom = 57.0
step = 5.0

[node name="AmbienceSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 61.0
offset_right = 107.0
offset_bottom = 77.0
step = 5.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 8
text = "Audio Settings"

[node name="Music" type="Label" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 12.0
offset_right = 104.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 8
text = "Music"

[node name="SFX" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 34.0
offset_right = 114.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 8
text = "SFX"

[node name="Ambience" type="Label" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = 53.0
offset_right = 106.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 8
text = "Ambeince"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = -27.0
offset_right = 121.0
offset_bottom = -3.0
theme_override_font_sizes/font_size = 11
text = "Settings"

[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="AmbienceSlider" to="." method="_on_ambience_slider_value_changed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
